--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "devDependencies": {
     "browser-sync": "^2.27.9",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp.spritesmith": "^6.12.1",
     "rimraf": "^3.0.2",
     "sass": "^1.51.0"
